--- a/app/src/main/res/layout/activity_login.xml
+++ b/app/src/main/res/layout/activity_login.xml
@@ -56,6 +56,14 @@
             android:background="@drawable/button_background"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
+        <Button
+            android:onClick="registerHostel"
+            app:backgroundTint="@null"
+            android:layout_marginTop="16dp"
+            android:text="Register a hostel"
+            android:background="@drawable/button_background"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"/>
         <RelativeLayout
             android:layout_width="match_parent"
             android:layout_height="wrap_content">
