--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -3,14 +3,17 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="120dp"
+    android:background="@color/background"
     android:gravity="bottom|center"
     android:orientation="vertical"
     android:theme="@style/ThemeOverlay.AppCompat.Dark">
     <ImageView
+        app:tint="@color/accent"
         android:src="@drawable/ic_bed"
         android:layout_width="50dp"
         android:layout_height="50dp"/>
     <TextView
+        android:textSize="16sp"
         android:layout_marginTop="8dp"
         android:id="@+id/textEnglish"
         android:layout_width="match_parent"
