--- a/app/src/main/res/layout/nav_items_layout.xml
+++ b/app/src/main/res/layout/nav_items_layout.xml
@@ -65,6 +65,7 @@
         android:layout_width="match_parent"
         android:layout_height="1dp"/>
     <androidx.appcompat.widget.LinearLayoutCompat
+        android:visibility="gone"
         android:id="@+id/layoutFavorites"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
