--- a/app/src/main/res/layout/activity_hostel_details.xml
+++ b/app/src/main/res/layout/activity_hostel_details.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context=".HostelDetails">
 
-    <ScrollView
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
@@ -136,7 +136,7 @@
                 android:layout_marginStart="16dp"
                 android:layout_marginEnd="16dp"
                 android:id="@+id/tvDescription"
-                android:text="@string/loreum_ipsum"
+                android:text="description"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
             <Button
@@ -148,8 +148,51 @@
                 android:background="@drawable/button_background"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"/>
+            <TextView
+                android:layout_marginTop="16dp"
+                android:textColor="@color/black"
+                android:textSize="16sp"
+                android:textStyle="bold"
+                android:layout_marginStart="16dp"
+                android:text="Reviews"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+            <LinearLayout
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="16dp"
+                android:layout_marginEnd="16dp"
+                android:orientation="horizontal"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
+                <EditText
+                    android:layout_gravity="center"
+                    android:layout_weight="0.7"
+                    android:padding="16dp"
+                    android:layout_marginRight="4dp"
+                    android:id="@+id/etComment"
+                    android:hint="Write Review"
+                    android:background="@drawable/round_border"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"/>
+                <Button
+                    android:layout_gravity="center"
+                    android:layout_weight="0.3"
+                    android:onClick="postComment"
+                    app:backgroundTint="@null"
+                    android:text="POST"
+                    android:background="@drawable/button_background"
+                    android:layout_width="0dp"
+                    android:layout_height="wrap_content"/>
+            </LinearLayout>
+            <androidx.recyclerview.widget.RecyclerView
+                android:layout_marginTop="8dp"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="8dp"
+                android:id="@+id/rvComments"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
         </LinearLayout>
-    </ScrollView>
+    </androidx.core.widget.NestedScrollView>
 
 
 </LinearLayout>
